# AI-PEGD

./: README.md
ML/figures_data/: accuracy_plot_data__1000.csv  accuracy_plot_data__1700.csv  accuracy_plot_data__2000.csv  accuracy_plot_data__400.csv  confusion_matrix_data__1000.csv  confusion_matrix_data__1700.csv  confusion_matrix_data__2000.csv  confusion_matrix_data__400.csv  loss_plot_data__1000.csv  loss_plot_data__1700.csv  loss_plot_data__2000.csv  loss_plot_data__400.csv
ML/metrics/: complete_study_metrics__1000.json  complete_study_metrics__1700.json  complete_study_metrics__2000.json  complete_study_metrics__400.json  statistical_summary__1000.csv  statistical_summary__1700.csv  statistical_summary__2000.csv  statistical_summary__400.csv  training_history_per_epoch__1000.csv  training_history_per_epoch__1700.csv  training_history_per_epoch__2000.csv  training_history_per_epoch__400.csv
ML/training/: gunshot_model_quant.tflite  model_training_quantization_jupyter.ipynb
Raspberry_pi_pico/: .gitignore  CMakeLists.txt  Raspberry_pi_pico.cpp
dashboard/: main.py
python/Gunshots_ML/: .gitignore  CMakeLists.txt  README.md  RP2040_DEPLOYMENT_GUIDE.md  deploy_model.py  deploy_tflite_model.py  feature_extraction_rp2040.h  gunshot_detection_model.tflite  gunshot_detection_model_scaler.pkl  install_dependencies.bat  install_dependencies.sh  play_dataset_audio.py  realtime_detection.py  requirements.txt  rp2040_gunshot_detection.cpp  test1.py  test_realtime_detection.py
python/Gunshots_ML/results/: results.tex
stm32_nrf24_pio_rx/: platformio.ini
(+33 files in other folders)
